Embed hide button title, hide gem tally display

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		If you can read this then <strong>maybe</strong>:<br />
 		- You are still loading the website (slowly); ignore this message.<br />
 		- You are using an unsupported browser; please try another browser.<br />
-		- Your browser's adblocker is blocking the leaflet.js map script; please whitelist it.<br />
+		- Your browser is blocking the leaflet.js map script; please whitelist it.<br />
 		- This web application encountered a bug; try refreshing (Ctrl+F5).<br />
 		Do you want to <a href="http://forum.renaka.com/topic/5476238/">ask for help?</a><br />
 	</div>
@@ -199,6 +199,7 @@
 							<ul>
 								<li><a href="https://www.reddit.com/r/Guildwars2/comments/5tgubw/compilation_of_lake_doric_maps_and_resources/">Zone: Lake Doric</a></li>
 								<li><a href="https://www.reddit.com/r/Guildwars2/comments/5epb0k/i_got_turned_into_a_snowcone_dozens_of_times_but/">Zone: Bitterfrost Frontier</a></li>
+								<li><a href="https://www.reddit.com/r/gw2timer/comments/5xfb09/compilation_of_ember_bay_maps_and_resources/">Zone: Ember Bay</a></li>
 								<li><a href="https://www.reddit.com/r/Guildwars2/comments/4vic4c/bloodstone_fen_map_tools_resource_nodes_event_map/">Zone: Bloodstone Fen</a></li>
 								<li><a href="http://forum.renaka.com/topic/6209670/">LS3: Transfer Chaser</a></li>
 								<li><a href="http://forum.renaka.com/topic/6205181/">LS3: Bloodstone-Crazed Creatures</a></li>
