--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170303C"></script>
+	<script type="text/javascript" src="data/general.js?v=20170304"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -201,6 +201,8 @@
 								<li><a href="https://www.reddit.com/r/Guildwars2/comments/5epb0k/i_got_turned_into_a_snowcone_dozens_of_times_but/">Zone: Bitterfrost Frontier</a></li>
 								<li><a href="https://www.reddit.com/r/gw2timer/comments/5xfb09/compilation_of_ember_bay_maps_and_resources/">Zone: Ember Bay</a></li>
 								<li><a href="https://www.reddit.com/r/Guildwars2/comments/4vic4c/bloodstone_fen_map_tools_resource_nodes_event_map/">Zone: Bloodstone Fen</a></li>
+								<li><a href="https://www.reddit.com/r/Guildwars2/comments/346wom/120_silverwastes_lost_bandit_chests_map_locations/">Zone: Silverwastes</a></li>
+								<li><a href="https://www.reddit.com/r/Guildwars2/comments/2df20y/drp2_dry_top_live_map_and_timer_updated_100/">Zone: Dry Top</a></li>
 								<li><a href="http://forum.renaka.com/topic/6209670/">LS3: Transfer Chaser</a></li>
 								<li><a href="http://forum.renaka.com/topic/6205181/">LS3: Bloodstone-Crazed Creatures</a></li>
 								<li><a href="https://www.reddit.com/r/Guildwars2/comments/4urr23/leyline_anomaly_tldr_guide_v2/">LS3: Ley-Line Anomaly</a></li>
