--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170317"></script>
+	<script type="text/javascript" src="data/general.js?v=20170317A"></script>
+	<script type="text/javascript" src="data/sale.js"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -96,7 +97,7 @@
 								</ul>
 							</li>
 							<li class="itemContextSubmenu"><span>Nodes</span>
-								<ul>
+								<ul class="itemContextAutoWidth">
 									<li id="mapContextNodeList_Ore" class="mapContextCompassList jsIgnore"></li>
 									<li id="mapContextNodeList_Wood" class="mapContextCompassList jsIgnore"></li>
 									<li id="mapContextNodeList_Plant" class="mapContextCompassList jsIgnore"></li>
