Compass undo, auto audit for error

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 									<li id="mapContextImportCompasses">Import</li>
 									<li id="mapContextExportCompasses">Export</li>
 									<li id="mapContextHelpCompasses">Help</li>
+									<li id="mapContextUndoCompasses">Undo</li>
 								</ul>
 							</li>
 							<li class="itemContextSubmenu"><span>Nodes</span>
@@ -416,6 +417,7 @@
 									<li id="wvwContextImportCompasses">Import</li>
 									<li id="wvwContextExportCompasses">Export</li>
 									<li id="wvwContextHelpCompasses">Help</li>
+									<li id="wvwContextUndoCompasses">Undo</li>
 									<li id="wvwContextDrawCompasses">Draw</li>
 								</ul>
 							</li>
