Fix faux ID, TP tracker bulk fetch, WvW pause button

--- a/index.html
+++ b/index.html
@@ -493,7 +493,10 @@
 											<label><input id="opt_bol_narrateKeep" type="checkbox" /><var></var></label>
 											<label><input id="opt_bol_narrateCastle" type="checkbox" /><var></var></label>
 										</div>
-										<label><input id="logNarrateVolume" type="range" min="0" max="100" step="5" title="Set volume." /></label>
+										<div>
+											<button><img id="wvwPause" data-src="img/ui/cancel.png" /></button>&nbsp;
+											<label style="display:inline-block"><input id="logNarrateVolume" type="range" min="0" max="100" step="5" title="Set volume." /></label>
+										</div>
 									</div>
 								</div>
 								<div id="logFilters">
