Sale update, unified bulk fetch cache, account titles

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170324"></script>
-	<script type="text/javascript" src="data/sale.js?v=20170324"></script>
+	<script type="text/javascript" src="data/general.js?v=20170325"></script>
+	<script type="text/javascript" src="data/sale.js?v=20170325"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -205,6 +205,11 @@
 										<li><a class="jsTranslate" href="http://forum.renaka.com/topic/5500046/">Changelog</a> - Site updates</li>
 										<li><a href="https://twitter.com/gw2timer">Twitter</a> - Follow GW2Timer.com</li>
 										<li><a href="http://forum.renaka.com/topic/5954229/"><ins class="s16 s16_wiki"></ins></a> - ArenaNet endorsements</li>
+									</ul>
+									<h2>More Quicklinks</h2>
+									<ul>
+										<li><a href="./?page=WvW&section=Leaderboard&enu_Server=1008">WvW NA Leaderboard</a></li>
+										<li><a href="./?page=WvW&section=Leaderboard&enu_Server=2002">WvW EU Leaderboard</a></li>
 									</ul>
 								</div>
 								<div class="hudDirectoryColumn">
