--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
 	<script type="text/javascript" src="data/general.js?v=20170325"></script>
-	<script type="text/javascript" src="data/sale.js?v=20170326"></script>
+	<script type="text/javascript" src="data/sale.js?v=20170327"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -204,7 +204,7 @@
 										<li><strong><a class="jsTranslate" href="http://forum.renaka.com/forum/368355/">Forum</a></strong> - Comments and suggestions</li>
 										<li><a class="jsTranslate" href="http://forum.renaka.com/topic/5500046/">Changelog</a> - Site updates</li>
 										<li><a href="https://twitter.com/gw2timer">Twitter</a> - Follow GW2Timer.com</li>
-										<li><a href="http://forum.renaka.com/topic/5954229/"><ins class="s16 s16_wiki"></ins></a> - ArenaNet endorsements</li>
+										<li><ins class="s16 s16_wiki"></ins> <a href="http://forum.renaka.com/topic/5954229/">ArenaNet endorsements</a></li>
 									</ul>
 									<h2>More Quicklinks</h2>
 									<ul>
