Sale update, separate DT DS

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170325"></script>
-	<script type="text/javascript" src="data/sale.js?v=20170327"></script>
+	<script type="text/javascript" src="data/general.js?v=20170328"></script>
+	<script type="text/javascript" src="data/sale.js?v=20170328"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -49,7 +49,7 @@
 	<div id="itemVignette"></div><!-- Ornamental shadow frame for window overlay -->
 	<div id="itemConsole">
 		<div id="cslButtons">
-			<kbd id="cslClose" class="btnWindow btnClose" title="<dfn>Close Console</dfn>"></kbd>
+			<kbd id="cslClose" class="btnWindow btnClose" title="<dfn>Close Console</dfn><br /><cite>Shortcut: Esc Key</cite>"></kbd>
 			<kbd id="cslSelect" class="btnWindow btnCopy" title="<dfn>Select Console</dfn>"></kbd>
 			<kbd id="cslToggle" class="btnWindow btnToggle" title="<dfn>Toggle Console</dfn>"></kbd>
 		</div>
