--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@
 						<div id="tmlContainer">
 							<kbd id="tmlOpaque" class="btnWindow btnOpaque" title="<dfn>Toggle timeline opacity</dfn>"></kbd>
 							<kbd id="tmlCondense" class="btnWindow btnVertical" title="<dfn>Condense timeline</dfn> or show all lines again."></kbd>
-							<kbd id="tmlDelete" class="btnWindow btnClose" title="<dfn>Delete timeline</dfn>. To restore, go to Options page, Map section."></kbd>
 							<div id="tmlIndicator"><div id="tmlIndicatorTime"></div></div>
 							<div id="tmlBisector"></div>
 						</div>
@@ -303,7 +302,7 @@
 							<label title="Double click on the map to lay/remove a personal pin.<br />This option will draw a path from these pins."><img data-src="img/map/pin_white.png" /><input id="opt_bol_showPersonalPaths" type="checkbox" /> Show personal paths</label>
 							<label title="Show/Hide the colored chain paths of world bosses."><img data-src="img/map/pin_green.png" /><input id="opt_bol_showChainPaths" type="checkbox" /> Show chain paths</label>
 							<label title="Automatically scroll the map to the next predicted world boss event.<br />You'll need to be on the Chains page."><img data-src="img/map/path.png" /><input id="opt_bol_tourPrediction" type="checkbox" /> Tour predicted events</label>
-							<label title="Color of the personal pins path and world completion route."><input id="opt_str_colorPersonalPath" type="text" maxlength="32" style="width:96px;"> Path Color</label>
+							<label title="Color of the personal path and world completion route."><input id="opt_str_colorPersonalPath" type="text" maxlength="32" style="width:96px;"> Path Color</label>
 							<br />
 							<label title="Show/Hide the side app panel."><img data-src="img/map/panel.png" /><input id="opt_bol_showPanel" type="checkbox" /> Show app panel</label>
 							<label title="App panel on the right or left side of the map?"><img data-src="img/ui/adjust_move.png" /><input id="opt_bol_alignPanelRight" type="checkbox" /> Align panel to the right</label>
