Fix account menu display platter boolean

--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
 		<section id="paneContent" class="paneApp">
 			<article id="plateDirectory" class="jsScrollable">
 				<div id="itemLanguage">
-					<kbd id="itemLanguageButton"></kbd>
+					<div id="itemLanguageButton"></div>
 					<ul id="itemLanguagePopup" class="cntPopup">
 						<li><a class="linkLanguage" data-lang="en">English</a></li>
 						<li><a class="linkLanguage" data-lang="de">Deutsch</a></li>
