--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	<script>window.L || document.write("<script src='bin/leaflet.js'><\/script>");</script>
 	<!-- Web application files  -->
 	<script type="text/javascript" src="plugins.js"></script>
-	<script type="text/javascript" src="data/general.js?v=20170404"></script>
-	<script type="text/javascript" src="data/sale.js?v=20170404"></script>
+	<script type="text/javascript" src="data/general.js?v=20170405"></script>
+	<script type="text/javascript" src="data/sale.js?v=20170405"></script>
 	<script type="text/javascript" src="data/chains-min.js"></script>
 	<script type="text/javascript" src="gw2t-min.js"></script><!-- Source is at http://gw2timer.com/gw2t.js -->
 	<!-- Google Analytics -->
@@ -915,7 +915,7 @@
 					<label class="cssHidden"><input id="opt_bol_opaqueTimeline" type="checkbox" /></label>
 					<label title="Only show the HUD when you are on the Chains page."><input id="opt_bol_hideHUD" type="checkbox" /> Hide HUD if not on Chains page</label>
 					<label title="Some map features like right clicking are disabled for touchscreens, check this for normal click behavior. Requires reload."><input id="opt_bol_ignoreTouch" type="checkbox" /> Ignore touchscreens and enable context menus</label>
-					<span>For map options, hover over the <img class="cntIconExample" src="img/ui/menu/display.png" alt="Icon" /> button on the top right corner of the map pane. To toggle the Dashboard and Timeline, right click on the map and choose &quot;Toggle HUD&quot;.</span><br />
+					<span>For map options, hover over the <img class="cntIconExample" src="img/ui/menu/display.png" alt="Icon" /> button on the top right corner of the map pane.</span><br />
 					<br />
 					<h2>Alarm</h2>
 					<span>Voice announcement requires Chrome, Firefox, or IE11+. Hover over the speaker icon on the chains page to change alarm.</span>
