Directory timers, left beam icon, timeline dashboard toggle

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 									</ul>
 									<h2>Tutorials</h2>
 									<ul>
-										<li><a href="https://www.youtube.com/watch?v=uXqvTMGNIXo">GW2Timer.com Video Manual</a></li>
+										<li><a href="https://www.youtube.com/watch?v=uXqvTMGNIXo">How to use GW2Timer.com</a></li>
 										<li><a href="http://forum.renaka.com/topic/5602037/">Timer Features</a></li>
 										<li><a href="http://forum.renaka.com/topic/5888854/">Map Features</a></li>
 										<li><a href="http://forum.renaka.com/topic/5697040/">TP &amp; Gem Tracker</a></li>
@@ -905,7 +905,7 @@
 						</fieldset>
 					</div>
 					<label title="Show/Hide clock's tick hand."><input id="opt_bol_showSecondHand" type="checkbox" /> Show clock second hand</label>
-					<label title="Show/Hide GW2 official event countdowns and gem sales on the main page. Requires reload."><input id="opt_bol_showDashboard" type="checkbox" /> Show the dashboard</label>
+					<label title="Show/Hide GW2 official event countdowns and gem sales on the main page."><input id="opt_bol_showDashboard" type="checkbox" /> Show the dashboard</label>
 					<br />
 					<h2>Map</h2>
 					<label title="Show/Hide the map."><input id="opt_bol_showMap" type="checkbox" /> Show the map</label>
