Overlay Directory plate under clock

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 							<label><input id="opt_bol_narrateCastle" type="checkbox" /><var></var></label>
 						</div>
 						<div id="logNarrateOther">
-							<button title="Pause/Resume updates"><img id="wvwPause" data-src="img/ui/cancel.png" /></button>&nbsp;
+							<button title="Pause/Resume updates."><img id="wvwPause" data-src="img/ui/cancel.png" /></button>&nbsp;
 							<label style="display:inline-block"><input id="logNarrateVolume" type="range" min="0" max="100" step="5" title="Set volume." /></label>
 						</div>
 					</div>
